Batch merge from WIMM 1.0 tree.

--- a/data/main.conf
+++ b/data/main.conf
@@ -9,7 +9,7 @@
 # %b - substituted for ro.product.brand
 # %m - substituted for ro.product.model
 # %n - substituted for ro.product.name
-Name = %m
+Name = WIMM One
 
 # Default device class. Only the major and minor device class bits are
 # considered.
@@ -17,7 +17,21 @@ Name = %m
 #     0x400000  - Service class: Telephony
 #     0x000200  - Major class: Phone
 #     0x00000C  - Minor class: Smart phone
-Class = 0x40020C
+# Class = 0x40020C
+
+# zachrosen 20100916 begin: changed class to WEARABLE_WRIST_WATCH
+#     0x600000  - Service class: Audio+Telephony (1<<21)|(1<<22)
+#     0x000700  - Major class: Wearable (0x7)<<8
+#     0x000004  - Minor class: Wristwatch (0x1)<<2
+# Class = 0x600704
+# zachrosen 20100916 end: changed class to WEARABLE_WRIST_WATCH
+
+# zachrosen 20100917 begin: changed class to Hands-Free (for iPhone compatibility)
+#     0x200000  - Service class: Audio (1<<21)
+#     0x000400  - Major class: Audio/Video (0x4)<<8
+#     0x000008  - Minor class: Hands-free Device (0x2)<<2
+Class = 0x200408
+# zachrosen 20100917 end: changed class to Hands-Free (for iPhone compatibility)
 
 # How long to stay in discoverable mode before going back to non-discoverable
 # The value is in seconds. Default is 180, i.e. 3 minutes.
