--- a/data/audio.conf
+++ b/data/audio.conf
@@ -1,6 +1,6 @@
 [General]
-Enable=
-Disable=Source,Control,Sink,Gateway,Headset
+Enable=Sink
+Disable=Source,Control,Gateway,Headset
 
 Master=false
 AutoConnect=false
