Clarify A2DP autoconnect setting.

--- a/data/audio.conf
+++ b/data/audio.conf
@@ -23,7 +23,7 @@ Master=false
 # connections. Some headsets that support both profiles will only connect the
 # other one automatically so the default setting of true is usually a good
 # idea.
-#AutoConnect=true
+AutoConnect=false
 
 # Headset interface specific options (i.e. options which affect how the audio
 # service interacts with remote headset devices)
